.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Simplified portal creation code and got rid of the PloneGenerator class in
  setuphandlers. It was a useless closure for independent functions.
  [hannosch]

- Removed the `plone-site` import step and stop overriding the
  `componentregistry` step. The portal object directly implements the
  IObjectManagerSite interface, so we don't need to activate it as a site
  manager in an extra step anymore.
  [hannosch]

- Updated and added various ZMI-visible tool titles.
  [hannosch]

- Removed the `plone-archetypes` import step. This is handled via a normal
  GenericSetup dependency in metadata.xml.
  [hannosch]

- Merged the `plone_various` import step into the `plone-final` step and
  install more packages directly by their profiles.
  [hannosch]

- Removed the zserverPatch. There's not many people running ZServer as the
  front-end web server anymore, so this isn't particular useful.
  [hannosch]

- Fixed the default portlet blacklisting for the `Members` folder.
  [hannosch]

- Replaced Products.ATReferenceBrowserWidget with
  archetypes.referencebrowserwidget. This is PLIP 9258
  http://dev.plone.org/plone/ticket/9258
  [tom_gross]

- Clarified help text for extension profiles on the add site form.
  [davisagli]

- Added a mechanism for specifying profiles that are selected by default on
  the add site form. This should be kept in sync with PloneTestCase's list
  of default extension profiles.
  [davisagli]

- Hide the plonetheme.sunburst uninstall profile from the add site form.
  [davisagli]

- Default to plonetheme.sunburst for new sites.
  [esteele, davisagli]

- Allow email addresses as login name, with a switch on the security
  panel. This is plip 9214: Refs http://dev.plone.org/plone/ticket/9214.
  [maurits]
